compiler-core/src/parse/snapshots/gleam_core__parse__tests__parsing_bit_array_pattern_with_invalid_unit.snap
---
source: compiler-core/src/parse/tests.rs
expression: "pub fn wibble() {\n  let assert <<1:unit(Upname)>> = todo\n}"
---
----- SOURCE CODE
pub fn wibble() {
  let assert <<1:unit(Upname)>> = todo
}

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:23
  │
2 │   let assert <<1:unit(Upname)>> = todo
  │                       ^^^^^^ I was not expecting this

Found a name, expected one of: 
- A positive integer
